check user is registered
